{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "31b7e436-5181-468a-98f1-a68049f98a55",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "52053cac-588c-4c4d-9680-87c71e398e51",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "92ab4a70-318b-4dfb-9481-7f9256aeb8aa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6b380a88-dede-4fc0-9fbd-4f5c911bc886",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21c95242-fc6b-4751-bf71-0b0e0f651612",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}